--- a/Tic-Tac-Toe/package.json
+++ b/Tic-Tac-Toe/package.json
@@ -8,7 +8,8 @@
     "dev": "vite",
     "test": "vitest --ui",
     "deploy": "gh-pages -d build",
-    "predeploy": "npm run build"
+    "predeploy": "npm run build",
+    "build": "webpack"
   },
   "engines": {
     "node": "18.16.0",
